--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -15,4 +15,23 @@ body {
     font-size: 2em;
     color: red;
   }
-  
+
+/* Fondo personalizado para el modal de login */
+.custom-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://e0.pxfuel.com/wallpapers/593/18/desktop-wallpaper-mechanic-garage-workshop-girl-repair-ford-car.jpg');
+  background-size: cover;
+  background-position: center;
+  z-index: 500; /* Debe estar por encima del contenido de la página */
+}
+
+/* Ajuste del modal para que esté centrado sobre el fondo */
+.custom-modal-content {
+  position: relative;
+  z-index: 1050; /* Por encima del fondo personalizado */
+  border-radius: 10px;
+}
